server.log
Server is running on http://localhost:3000
Server is running on http://localhost:3000
Server is running on http://localhost:3000
Server is running on http://localhost:3000
Server is running on http://localhost:3000
Server is running on http://localhost:3000
Server is running on http://localhost:3000
Server is running on http://localhost:3000
Server is running on http://localhost:3000
Server is running on http://localhost:3000
Server is running on http://localhost:3000
Server is running on http://localhost:3000
Server is running on http://localhost:3000
node:events:486
      throw er; // Unhandled 'error' event
      ^

Error: listen EADDRINUSE: address already in use :::3000
    at Server.setupListenHandle [as _listen2] (node:net:1940:16)
    at listenInCluster (node:net:1997:12)
    at Server.listen (node:net:2102:7)
    at app.listen (D:\graph\node_modules\express\lib\application.js:635:24)
    at Object.<anonymous> (D:\graph\server\index.js:15:5)
    at Module._compile (node:internal/modules/cjs/loader:1761:14)
    at Object..js (node:internal/modules/cjs/loader:1893:10)
    at Module.load (node:internal/modules/cjs/loader:1481:32)
    at Module._load (node:internal/modules/cjs/loader:1300:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
Emitted 'error' event on Server instance at:
    at emitErrorNT (node:net:1976:8)
    at process.processTicksAndRejections (node:internal/process/task_queues:89:21) {
  code: 'EADDRINUSE',
  errno: -4091,
  syscall: 'listen',
  address: '::',
  port: 3000
}

Node.js v24.12.0
Server is running on http://localhost:3000
Server is running on http://localhost:3000
Server is running on http://localhost:3000
Server is running on http://localhost:3000
Server is running on http://localhost:3000
Server is running on http://localhost:3000
D:\graph\server\index.js:55
});
^

SyntaxError: Unexpected token '}'
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at Module._compile (node:internal/modules/cjs/loader:1735:20)
    at Object..js (node:internal/modules/cjs/loader:1893:10)
    at Module.load (node:internal/modules/cjs/loader:1481:32)
    at Module._load (node:internal/modules/cjs/loader:1300:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
    at Module.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:154:5)
    at node:internal/main/run_main_module:33:47

Node.js v24.12.0
Server is running on http://localhost:3000
Server is running on http://localhost:3000
Server is running on http://localhost:3000
Server is running on http://localhost:3000
Server is running on http://localhost:3000
